--- a/musicmood/spotify_mood/static/spotify_mood/custom_btn.css
+++ b/musicmood/spotify_mood/static/spotify_mood/custom_btn.css
@@ -33,6 +33,8 @@
 
 .btn:hover {
   background-color: var(--ciemny-wiodący);
+  transition: transform 0.2s ease-in-out;
+  transform:scale(1.05);
 }
 
 .btn:hover svg {
