--- a/musicmood/spotify_mood/static/spotify_mood/custom_btn.css
+++ b/musicmood/spotify_mood/static/spotify_mood/custom_btn.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100%;
   fill: none;
-  stroke: var(--tekst);
+  stroke: var(--detal);
   stroke-dasharray: 150 480;
   stroke-dashoffset: 150;
   transition: stroke-dashoffset 1s ease-in-out;
@@ -45,7 +45,7 @@
 .btn span {
   position: relative;
   z-index: 1;
-  color: var(--tekst);
+  color: var(--button-text);
   font-size: 18px;
   font-weight: 100;
 }
