--- a/musicmood/spotify_mood/static/spotify_mood/home_page.css
+++ b/musicmood/spotify_mood/static/spotify_mood/home_page.css
@@ -5,7 +5,7 @@
     width: 100%;
     max-height: 150px;
     overflow-y: auto;
-    border: 1px solid var(--tekst);
+    border: 1px solid var(--detal);
     background-color: var(--ciemniejszy-szary);
     position: absolute;
     z-index: 10000;
@@ -30,15 +30,14 @@
     background-color: var(--ciemniejszy-szary);
     font-size: calc(100% + 2px);
 }
+
 #moodDropdownButton{
-    color:var(--tekst);
+    color:var(--detal);
 }
 
 .home_div {
-    width: 65%;
     margin-top: 10px;
     background-color: var(--najciemniejszy);
-    padding: 20px;
     text-align: left;
     border-radius: 10px;
     color: var(--tekst);
@@ -57,7 +56,7 @@
     align-items: center;
     padding: 5px;
     background-color: var(--jasno-szary);
-    border: 1px solid var(--tekst);
+    border: 1px solid var(--detal);
     border-radius: 5px;
     width: auto;
 }
@@ -77,7 +76,7 @@
     margin: 5px;
     padding: 5px;
     background-color: var(--ciemniejszy-szary);
-    border: 1px solid var(--tekst);
+    border: 1px solid var(--detal);
     border-radius: 5px;
     width: auto;
 }
@@ -96,17 +95,15 @@
     margin-left: 10px;
 }
 
-.selected-genres-container {
-    display: flex;
-    flex-wrap: wrap;
-}
+
 
 #track_count {
     background-color: var(--ciemniejszy-szary);
     color: var(--tekst);
-    border: 1px solid var(--tekst);
+    border: 1px solid var(--detal);
     padding: 8px;
     height: 100%;
+    width:80px;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -114,7 +111,7 @@
 #genreSearch, #moodInput, #playlist_name, #playlist_description{
     background-color: var(--ciemniejszy-szary);
     color: var(--tekst);
-    border: 1px solid var(--tekst);
+    border: 1px solid var(--detal);
     padding: 8px;
     border-radius: 5px;
 }
@@ -148,4 +145,91 @@
     padding: 20px;
     border-radius: 8px;
     text-align: center;
+}
+@media (min-width: 768px) {
+    .home_div {
+        width: 65%;
+        padding: 20px;
+    }
+    input[type="text"] {
+        width: 40%;
+    }
+    #tolerance_label{
+        margin-left: 80px;
+        width: 60%;
+    }
+    #playlist_container {
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+    #playlist_name_div{
+        margin-right: 10%;
+    }
+    .selected-genres-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #homeh1{
+        margin-top:5%; !important;
+    }
+    #mooddiv{
+        width: 40%;
+    }
+    #moodInput{
+        width: 100%;
+    }
+    #tolerance_label{
+        margin-left: 70px;
+        width: 30%;
+    }
+    #genre_div{
+        width: 40%;
+    }
+
+}
+@media (max-width: 576px) {
+    .home_div {
+        width: 100%;
+        padding: 10px;
+        text-align: center;
+    }
+
+    h1, h2{
+        font-size: 1.2rem;
+        text-align: center;
+    }
+
+    input[type="text"] {
+        width: 90%;
+    }
+
+    #tolerance_label{
+        margin-left: 0px;
+        width: 100%;
+    }
+    #radio_div{
+        justify-content: center;
+        align-content: center;
+    }
+    #playlist_container{
+        flex-direction: column;
+        text-align: center;
+    }
+    #selectedGenresContainer{
+        justify-content: center;
+        align-content: center;
+    }
+    h3{
+        font-size: 0.9rem;
+    }
+    #energy, #tempo, #positivity, #loudness, #danceability{
+        width:55%;
+    }
+    #homeh1{
+        margin-top:100px; !important;
+        width: 90%;
+        font-size: 24px;
+    }
+
 }
