--- a/musicmood/spotify_mood/static/spotify_mood/login_page.css
+++ b/musicmood/spotify_mood/static/spotify_mood/login_page.css
@@ -6,7 +6,6 @@ body {
   background-color: var(--najciemniejszy);
   border: 2px solid var(--wiodący);
   padding: 40px;
-  width: 60%;
   text-align: center;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -29,9 +28,24 @@ body {
   margin-bottom: 40px;
 }
 
-
 .login-container p {
   color: var(--tekst);
   font-size: 18px;
   margin-bottom: 20px;
 }
+
+@media (min-width: 768px) {
+  .login-container{
+    width: 60%;
+  }
+}
+@media (max-width: 576px) {
+  .login-container{
+    width: 90%;
+  }
+  #login_logo{
+    width:150px;
+    max-width: 300px;
+  }
+}
+
