--- a/musicmood/spotify_mood/static/spotify_mood/play_page.css
+++ b/musicmood/spotify_mood/static/spotify_mood/play_page.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 70%;
     padding: 20px;
     margin-top: 20px;
     background-color: var(--najciemniejszy);
@@ -20,10 +19,9 @@
 }
 
 .playlist-img {
-    width: 20%;
-    height: 20%;
+    width: 200px;
+    height: auto;
     object-fit: cover;
-    margin-right: 20px;
 }
 
 .playlist-details {
@@ -90,6 +88,10 @@
     flex: 1;
 }
 
+.btn{
+    margin-bottom: 20px;
+}
+
 .songs-list {
     max-height: 200px;
     overflow-y: auto;
@@ -107,7 +109,9 @@
     color: var(--wiodący);
     margin-left: 6px;
 }
-
+.custom-heart-empty{
+    color:var(--tekst) !important;
+}
 
 .custom-heart-empty,
 .custom-heart {
@@ -130,6 +134,59 @@
     cursor: pointer !important;
     transition: transform 0.1s ease-in-out;
 }
+
+@media (min-width: 768px) {
+    #play_h1{
+        margin-top:7% !important;
+    }
+    .play_div {
+        width: 70%;
+    }
+    .playlist-img {
+        margin-right:20px
+    }
+}
+@media (max-width: 576px) {
+    #play_h1 {
+        min-height: 80px;
+        margin-top: 120px !important;
+        width: 90%;
+        font-size: 24px;
+    }
+
+    .play_div {
+        width: 90%;
+        padding: 15px;
+    }
+
+    .playlist-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .playlist-img {
+        width: 150px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .playlist-details {
+        margin-bottom: 10px;
+    }
+
+    .player-controls {
+        margin-bottom: 10px;
+        justify-content: center;
+    }
+
+    .expand-btn {
+        justify-content: center;
+        margin-top: 10px;
+    }
+}
+
 
 
 
