--- a/musicmood/spotify_mood/static/spotify_mood/settings_page.css
+++ b/musicmood/spotify_mood/static/spotify_mood/settings_page.css
@@ -88,6 +88,7 @@ input[type="text"] {
     input[type="text"] {
         width: 40%;
     }
+
 }
 
 @media (max-width: 576px) {
@@ -103,6 +104,15 @@ input[type="text"] {
 
     input[type="text"] {
         width: 100%;
+    }
+
+    #settingsh1{
+        margin-top:50px;
+        width: 90%;
+        font-size: 24px;
+    }
+    .center-container{
+        text-align: center;
     }
 }
 
