--- a/musicmood/spotify_mood/templates/navbar.html
+++ b/musicmood/spotify_mood/templates/navbar.html
@@ -27,24 +27,30 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="custom_navbar" data-bs-theme="dark">
     <div class="container-fluid d-flex justify-content-between align-items-center">
         <img src="{% static 'spotify_mood/logo.png' %}" alt="my img" width="80" height="80">
-        <a class="navbar-brand " style="margin-left: 50px;">MusicMood</a>
+        <a class="navbar-brand " style="margin-left: 50px; color:var(--tekst);">MusicMood</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggle bi-list"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-right" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
+            <div class="navbar-nav ms-auto mobile-horizontal">
+
+                <div class="theme-toggle-wrapper" style="display: flex; align-items: center;" data-bs-toggle="tooltip" data-bs-title="Przełącz motyw">
+                    <input class="form-check-input" type="checkbox" id="themeToggle" style="margin-right: 8px;">
+                    <i class="bi bi-moon" id="themeIcon" style="font-size: 1rem; margin-top: 3px; margin-right:10px; color:var(--detal);"></i>
+                </div>
+
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:home" %}"
                    data-bs-toggle="tooltip" data-bs-title="Strona główna"><i
-                    class="bi bi-house"></i></a>
+                    class="navbar-icon bi bi-house"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:settings" %}"
-                   data-bs-toggle="tooltip" data-bs-title="Ustawienia"><i class="bi bi-gear"></i></a>
+                   data-bs-toggle="tooltip" data-bs-title="Ustawienia"><i class="navbar-icon bi bi-gear"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:play" %}"
-                   data-bs-toggle="tooltip" data-bs-title="Muzyka"><i class="bi bi-headphones"></i></a>
+                   data-bs-toggle="tooltip" data-bs-title="Muzyka"><i class="navbar-icon bi bi-headphones"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:info" %}"
-                   data-bs-toggle="tooltip" data-bs-title="Info"><i class="bi bi-info-circle"></i></a>
+                   data-bs-toggle="tooltip" data-bs-title="Info"><i class="navbar-icon bi bi-info-circle"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:logout" %}"
-                   data-bs-toggle="tooltip" data-bs-title="Wyloguj"><i class="bi bi-box-arrow-left"></i></a>
+                   data-bs-toggle="tooltip" data-bs-title="Wyloguj"><i class="navbar-icon bi bi-box-arrow-left"></i></a>
             </div>
         </div>
     </div>
@@ -54,6 +60,23 @@
     document.addEventListener('DOMContentLoaded', function () {
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
         const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    });
+
+    const themeToggle = document.getElementById('themeToggle');
+
+    if (localStorage.getItem('theme') === 'dark') {
+        document.documentElement.classList.add('dark-theme');
+        themeToggle.checked = true;
+    }
+
+    themeToggle.addEventListener('change', function () {
+        if (themeToggle.checked) {
+            document.documentElement.classList.add('dark-theme');
+            localStorage.setItem('theme', 'dark');
+        } else {
+            document.documentElement.classList.remove('dark-theme');
+            localStorage.setItem('theme', 'light');
+        }
     });
 </script>
 {% block navbar %}
