--- a/musicmood/spotify_mood/templates/navbar.html
+++ b/musicmood/spotify_mood/templates/navbar.html
@@ -45,6 +45,8 @@
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:home" %}"
                    data-bs-toggle="tooltip" data-bs-title="Strona główna"><i
                     class="navbar-icon bi bi-house"></i></a>
+                <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:tastedive" %}"
+                   data-bs-toggle="tooltip" data-bs-title="Rekomendacja tastedive"><i class="navbar-icon bi bi-vinyl"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:settings" %}"
                    data-bs-toggle="tooltip" data-bs-title="Ustawienia"><i class="navbar-icon bi bi-gear"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:play" %}"
@@ -53,6 +55,7 @@
                    data-bs-toggle="tooltip" data-bs-title="Info"><i class="navbar-icon bi bi-info-circle"></i></a>
                 <a class="nav-link" style="margin-top: 3px" href="{% url "spotify_mood:logout" %}"
                    data-bs-toggle="tooltip" data-bs-title="Wyloguj"><i class="navbar-icon bi bi-box-arrow-left"></i></a>
+
             </div>
         </div>
     </div>
