--- a/musicmood/spotify_mood/templates/spotify_mood/home.html
+++ b/musicmood/spotify_mood/templates/spotify_mood/home.html
@@ -385,7 +385,7 @@
         const totalPercentage = genrePercentages.reduce((acc, perc) => acc + perc, 0);
 
         if (selectedGenres.length === 0) {
-            alert('Musisz wybrać przynajmniej jeden gatunek muzyczny.');
+            apomolert('Musisz wybrać przynajmniej jeden gatunek muzyczny.');
             return false;
         }
 
